[package]
name = "passterm"
version = "2.0.0"
edition = "2021"
authors = [
	"Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "BSD-3-Clause"
description = "Read terminal password, check isatty"
repository = "https://github.com/finfet/passterm"
documentation = "https://docs.rs/passterm/"
homepage = "https://github.com/finfet/passterm"
keywords = ["tty", "password", "security", "isatty", "getpass"]
categories = ["command-line-interface"]

[dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Console", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
